# nodyx

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  install.sh  install_tunnel.sh
.github/workflows/: ci.yml  release-sfu.yml
SPECS/: NODYX_MEDIA_ENGINE_RUST.md  NODYX_SFU_BASCULE.md
docs/en/: EDITOR.md  OCTOGUARD.md  ROADMAP.md  STREAMER-HUB.md
docs/es/: RELAY.md  ROADMAP.md  THANKS.md
docs/fr/: README.md
docs/specs/015-streamer-hub/: PHASE_0_REPORT.md  PHASE_0_SPIKE.md  SPEC.MD
docs/specs/016-Octoguard/: 016-OctoGuard.md
docs/specs/017-admin-config/: SPEC.md
nodyx-authenticator/: package-lock.json  package.json
nodyx-core/: .env.example  package-lock.json  package.json
nodyx-core/src/: index.ts
nodyx-core/src/config/: settings.ts  settingsCrypto.ts  settingsRegistry.ts
nodyx-core/src/migrations/: 078_streamer_hub.sql  080_channels_system_managed.sql  084_bot_signup_attempts.sql  088_community_bans_expires_at.sql  089_octoguard_phase1.sql  092_streamer_overlays.sql  093_streamer_chat_timers.sql  (+5 more)
nodyx-docs/: package-lock.json  package.json
nodyx-frontend/: package-lock.json  package.json  svelte.config.js  vitest.config.ts
nodyx-frontend/src/: app.css  hooks.server.ts  service-worker.ts
nodyx-frontend/static/: robots.txt
nodyx-landing/: package-lock.json  package.json
nodyx-landing/src/: app.css  app.html
nodyx-p2p/: Cargo.toml
nodyx-p2p/crates/nodyx-gossip/: Cargo.toml
nodyx-p2p/crates/nodyx-gossip/src/: main.rs  node.rs  protocol.rs
nodyx-p2p/crates/nodyx-sfu/: Cargo.toml
nodyx-p2p/crates/nodyx-sfu/src/: lib.rs
(+188 files in other folders)
